force-app/main/default/objects/Account/fields/ExampleNumber__c.field-meta.xml
<CustomField>
    <fullName>ExampleNumber__c</fullName>
    <description>This is the first Field.</description>
    <label>ExampleNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>