force-app/main/default/objects/Account/fields/MultiPick__c.field-meta.xml
<CustomField>
    <fullName>MultiPick__c</fullName>
    <label>MultiPick</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arpit</fullName>
            </value>
            <value>
                <fullName>Gayatri</fullName>
            </value>
            <value>
                <fullName>Devendra</fullName>
            </value>
            <value>
                <fullName>Somya</fullName>
            </value>
            <value>
                <fullName>Suryansh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>